<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/antique_white"
    tools:context=".ScrollingActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/header3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/notificationp"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar3"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/antique_white"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="27sp"
                    android:text="@string/noti"
                    android:textColor="@color/black"
                    android:fontFamily="@font/convergence"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/notification"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/aref_ruqaa"/>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/noti"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/notification2"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/aref_ruqaa"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="27sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/java"
                    android:textColor="@color/black"
                    android:fontFamily="@font/convergence"/>

                <TextView
                    android:id="@+id/noti_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/aref_ruqaa"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/notification3"
                    android:textColor="@color/black"
                    android:fontFamily="@font/convergence"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:elevation="5dp"
            app:srcCompat="@drawable/ic_notification" />
        </FrameLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/drawer_layout"/>

</android.support.v4.widget.DrawerLayout>